[package]
name = "vicar"
version = "0.1.0"
edition = "2021"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
description = "VICAR file format support"
license = "MIT" 

[lib]
name = "vicar"

[dependencies]
sciimg = {path = "sciimg" }
pvl = {path = "pvl"}
itertools = "0.10.5"
anyhow = "1.0.65"
regex = "1.7.0"
lazy_static = "1.4.0"